{
    "name": "RunnerInputSystem",
    "maps": [
        {
            "name": "Gameplay",
            "id": "28bbcc4c-462b-4444-84f1-ddfdbc5a27c0",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "70e5d336-cd58-4884-a3b6-8ea5049ca48e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "23410c37-8724-4afc-b716-62800fed5d4f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartDrug",
                    "type": "PassThrough",
                    "id": "cec5c7e0-4b3b-4779-9ad6-75276faf0c35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "EndDrug",
                    "type": "PassThrough",
                    "id": "e1459d80-40d0-49ee-a364-178208ced0a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95d8f6ee-7e44-47d8-80d6-7b2c44414281",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "022d7fbd-e0a8-486c-9fbc-667ff48d8966",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88c52550-c772-4253-b0c9-114005c9d953",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47a354af-e067-4734-a0f3-dc2bd3f791d1",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eb76a21-c549-47d3-a736-1eec746dc3a6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "StartDrug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31b55366-422a-4003-bb96-9d28c6dc7f32",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "StartDrug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0836eac8-decc-48d9-bb55-0a1d11c96ce2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "EndDrug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e89c0123-34af-4f49-b418-51709bb5152f",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "EndDrug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}